# smart-road-autonomous-robot

./: .gitignore  Dockerfile  Dockerfile.arm64  README.md  TOPIC_SPEC.md  camera_test.html  republisher.py  startup_perp.sh
esp32_firmware/: README.md  platformio.ini
esp32_firmware/include/: config.h  secrets.example.h
esp32_firmware/src/: main.cpp  main.cpp.bak
esp32_firmware/tools/: keyboard_control.py
scripts/: run.sh  run_docker.sh  run_pi4.sh
src/agv_robot/: CMakeLists.txt  package.xml  setup.cfg  setup.py
src/agv_robot/launch/: gazebo.launch.py
src/agv_robot/models/X1/: model.config  model.sdf
src/agv_robot/models/cone/: model.config  model.sdf
src/agv_robot/models/speed_limit_sign/: model.config  model.sdf
src/agv_robot/models/stop_light/: model.config  model.sdf
src/agv_robot/models/stop_sign/: model.config  model.sdf
src/agv_robot/models/walking_actor/: model.config  model.sdf
src/agv_robot/models/walking_actor/meshes/: walk.dae
src/agv_robot/urdf/: agv_robot.urdf  agv_robot_urdf.xacro
src/agv_robot/worlds/: agv_track.sdf
src/control/: package.xml  setup.py
src/control/control/: control_node.py
src/interfaces/: CMakeLists.txt  package.xml
src/interfaces/msg/: Detection.msg  DetectionArray.msg  DrivingCmd.msg  RobotStatus.msg  SerialPacket.msg  SystemHealth.msg
src/perception/: package.xml  setup.py
src/perception/launch/: perception.launch.py
src/perception/perception/: camera_node.py  yolo_detector.py
src/project2_esp32/: QMI8658.cpp  project2_esp32.ino
src/serial_bridge/: package.xml  setup.py
src/serial_bridge/serial_bridge/: bridge_node.py
src/simple_fsm/: package.xml  setup.cfg  setup.py
src/simple_fsm/simple_fsm/: camera_node.py  fsm_node.py
src/simulation/: package.xml  setup.py
src/system/: package.xml  setup.cfg  setup.py
src/system/launch/: bringup.launch.py
src/traffic_light_plugin/: CMakeLists.txt  package.xml
src/traffic_light_plugin/src/: TrafficLightPlugin.cc
yolo/: .gitignore  data.yaml  predict.py  train.py
yolo/datasets/train/: labels.cache
yolo/datasets/val/: labels.cache
(+213 files in other folders)
