<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>traffic_light_plugin</name>
  <version>0.0.1</version>
  <description>Gazebo Harmonic plugin for traffic light color cycling</description>
  <maintainer email="jsdbswjd@todo.todo">jsdbswjd</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Gazebo Harmonic -->
  <depend>gz_sim_vendor</depend>
  <depend>gz_plugin_vendor</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
